added reference to osgi
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@672 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl2Java/.classpath
+++ b/BasicMTL_projects/BasicMtl2Java/.classpath
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="LibAssociation/src"/>
-    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="lib"
-        path="LibAssociation/dist/bin/BasicMTLruntime.jar" sourcepath="BasicMtl2Java/LibAssociation/src"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ANTLR/antlrfull.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/log4j/log4j.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/jmi.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/jmiutils.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/mdrapi.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/mof.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/nbmdr.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/openide-lookup.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/antlr.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/ANTLR4SimpleTRL.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/JMI1_0.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/JMIEngine.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/JMIRepository.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/log4j-1.2.6.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/ow_monolog.jar"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/ow_utils_commandline.jar"/>
-    <classpathentry kind="var" path="ECLIPSE_CORE_RUNTIME"/>
-    <classpathentry kind="var" path="ECLIPSE_UI_WORKBENCH"/>
-    <classpathentry kind="var" path="EMF_COMMON"/>
-    <classpathentry kind="var" path="EMF_EDIT"/>
-    <classpathentry kind="var" path="EMF_ECORE"/>
-    <classpathentry kind="var" path="EMF_ECORE_XMI"/>
-    <classpathentry kind="var" path="ECLIPSE_JFACE"/>
-    <classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/JUnit/junit.jar"/>
-    <classpathentry kind="output" path="LibAssociation/bin"/>
+	<classpathentry kind="src" path="LibAssociation/src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry sourcepath="BasicMtl2Java/LibAssociation/src" kind="lib" path="LibAssociation/dist/bin/BasicMTLruntime.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ANTLR/antlrfull.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/log4j/log4j.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/jmi.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/jmiutils.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/mdrapi.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/mof.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/nbmdr.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/MDR/openide-lookup.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/antlr.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/ANTLR4SimpleTRL.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/JMI1_0.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/JMIEngine.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/JMIRepository.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/log4j-1.2.6.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/ow_monolog.jar"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/ModFact/v1_0_0/ow_utils_commandline.jar"/>
+	<classpathentry kind="var" path="ECLIPSE_CORE_RUNTIME"/>
+	<classpathentry kind="var" path="ECLKIPSE_UI_WORKBENCH"/>
+	<classpathentry kind="var" path="EMF_COMMON"/>
+	<classpathentry kind="var" path="EMF_EDIT"/>
+	<classpathentry kind="var" path="EMF_ECORE"/>
+	<classpathentry kind="var" path="EMF_ECORE_XMI"/>
+	<classpathentry kind="var" path="ECLIPSE_JFACE"/>
+	<classpathentry kind="lib" path="LibAssociation/dist/bin/ThirdParty/JUnit/junit.jar"/>
+	<classpathentry kind="var" path="ECLIPSE_OSGI"/>
+	<classpathentry kind="output" path="LibAssociation/bin"/>
 </classpath>
