--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
@@ -1,10 +1,12 @@
-source.BasicMTLruntime.jar = src/
-c/
+source.runtime.jar = src/,\
+                     build/src/
 output.bin/BasicMTLruntime.jar = bin/
 bin.includes = plugin.xml,\
-               BasicMTLruntime.jar,\
+               runtime.jar,\
                bin/,\
-               META-INF/,\
                src/,\
-               ThirdParty/
-jars.compile.order = 
+               ThirdParty/,\
+               build/,\
+               META-INF/,\
+               manifest/
+output.runtime.jar = bin/
