added plugin entry point class for loading bundle resources adapted the src folder to be able to deal with both MTL and java files
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@676 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/samples.SimpleUML_projects/SimpleUML.transformations/build.properties
+++ b/samples.SimpleUML_projects/SimpleUML.transformations/build.properties
@@ -3,7 +3,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.1 2004-08-10 12:14:42 dvojtise Exp $
+ * $Id: build.properties,v 1.2 2004-08-16 11:46:22 dvojtise Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -11,8 +11,8 @@ bin.includes = plugin.xml,\
                SimpleUML_transformations.jar,\
                src/,\
                build/
-jars.compile.order = SimpleUML_transformations.jar
 src.includes = src/,\
                build/
-source.SimpleUML_transformations.jar = build/src/
+source.SimpleUML_transformations.jar = build/src/,\
+                                       src/Java/
 output.SimpleUML_transformations.jar = bin/
