corrected a name error for the main jar file
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@677 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/plugin.xml
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/plugin.xml
@@ -47,7 +47,7 @@
       <library name="ThirdParty/JUnit/junit.jar">
          <export name="*"/>
       </library>
-      <library name="BasicMTLruntime.jar">
+      <library name="runtime.jar">
          <export name="*"/>
       </library>
       <library name="ThirdParty/MDR/nbmdr.jar">
