update to a more recent version of the BasicMTL compiler Note: the compiler should be soon removed from this plugin and distributed in specialized plugins
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@681 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/Runtime/src/BasicMtlASTView/build.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/Runtime/src/BasicMtlASTView/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2004-07-30 14:10:38 sdzale Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-08-18 14:24:16 dvojtise Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="compile BasicMtlASTView" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
