--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/sample/Uml1.4Models/build.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/sample/Uml1.4Models/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2004-07-30 14:10:11 sdzale Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-08-18 14:24:03 dvojtise Exp $ -->
 <!-- Usefull script to pack and unpack zargo files from poseidon or ArgoUML -->
 <project name="poseidon import export" default="extract" basedir=".">
 	<description>
