--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/sample/build.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/sample/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2004-07-30 14:10:52 sdzale Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-08-18 14:24:36 dvojtise Exp $ -->
 <project name="UML14" default="run all UML14_Transformations" basedir=".">
 	<description>
         Sample Build file for using the BasicMTL compiler
