--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/sample/src/BasicMtlASTView/build.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/MTL/sample/src/BasicMtlASTView/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2004-07-30 14:11:10 sdzale Exp $ -->
+<!-- $Id: build.xml,v 1.2 2004-08-18 14:23:43 dvojtise Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="compile BasicMtlASTView" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
