added some MTL specific files in this plugin they are copied from Libassociation distribution to the build dir. copy is done using the copy_build.xml ant script automatically called by the project builder
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@682 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/org.inria.EMFDriver/build.properties
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/build.properties
@@ -1,4 +1,5 @@
-source.EMFDriver.jar = src/
+source.EMFDriver.jar = src/,\
+                       build/src/
+output.EMFDriver.jar = bin/
 bin.includes = plugin.xml,\
-               *.jar,\
                EMFDriver.jar
