--- a/RepositoryDriver_projects/org.inria.EMFDriver/build.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/build.xml
@@ -2,20 +2,28 @@
 <project name="org.inria.EMFDriver" default="build.jars" basedir=".">
 
 	<property name="bootclasspath" value=""/>
-	<property name="ws" value="win32"/>
-	<property name="os" value="win32"/>
-	<property name="arch" value="x86"/>
+	<property name="basews" value="${ws}"/>
+	<property name="baseos" value="${os}"/>
+	<property name="basearch" value="${arch}"/>
+	<property name="basenl" value="${nl}"/>
 	<property name="javacFailOnError" value="false"/>
 	<property name="javacDebugInfo" value="on"/>
 	<property name="javacVerbose" value="true"/>
+	<property name="javacSource" value="1.3"/>
+	<property name="javacTarget" value="1.2"/>
+	<property name="compilerArg" value=""/>
 
 	<target name="init" depends="properties">
-		<property name="plugin" value="org.inria.EMFDriver"/>
-		<property name="version.suffix" value="_1.0.0"/>
-		<property name="full.name" value="${plugin}${version.suffix}"/>
+		<condition property="pluginTemp" value="${buildTempFolder}/plugins">
+			<isset property="buildTempFolder"/>
+		</condition>
+		<property name="pluginTemp" value="${basedir}"/>
+		<condition property="build.result.folder" value="${pluginTemp}/org.inria.EMFDriver">
+			<isset property="buildTempFolder"/>
+		</condition>
+		<property name="build.result.folder" value="${basedir}"/>
 		<property name="temp.folder" value="${basedir}/temp.folder"/>
 		<property name="plugin.destination" value="${basedir}"/>
-		<property name="build.result.folder" value="${basedir}"/>
 	</target>
 
 	<target name="properties" if="eclipse.running">
@@ -29,39 +37,65 @@
 		<antcall target="gather.bin.parts">
 			<param name="destination.temp.folder" value="${temp.folder}/"/>
 		</antcall>
-		<zip zipfile="${plugin.destination}/${full.name}.jar" basedir="${temp.folder}/${full.name}" filesonly="false" update="no"/>
+		<zip zipfile="${plugin.destination}/org.inria.EMFDriver_1.0.0.jar" basedir="${temp.folder}/org.inria.EMFDriver_1.0.0" filesonly="false" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
-	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/${full.name}"/>
-		<copy file="${build.result.folder}/EMFDriver.jar" todir="${destination.temp.folder}/${full.name}"/>
-		<copy todir="${destination.temp.folder}/${full.name}">
-			<fileset dir="${basedir}" includes="plugin.xml,*.jar,EMFDriver.jar"/>
-		</copy>
-	</target>
-
 	<target name="EMFDriver.jar" depends="init" unless="EMFDriver.jar" description="Create jar: EMFDriver.jar.">
-		<property name="destdir" value="${temp.folder}/EMFDriver.jar.bin"/>
 		<delete dir="${temp.folder}/EMFDriver.jar.bin"/>
 		<mkdir dir="${temp.folder}/EMFDriver.jar.bin"/>
 		<!-- compile the source code -->
-		<javac destdir="${temp.folder}/EMFDriver.jar.bin" failonerror="${javacFailOnError}" verbose="${javacVerbose}" debug="${javacDebugInfo}" includeAntRuntime="no" bootclasspath="${bootclasspath}" classpath="../../plugins/org.eclipse.core.boot_2.1.2/bin;../../plugins/org.eclipse.core.boot_2.1.2/boot.jar;BasicMTLruntime.jar;log4j.jar;../../plugins/org.eclipse.core.runtime_2.1.1/bin;../../plugins/org.eclipse.core.runtime_2.1.1/runtime.jar;../../plugins/org.apache.xerces_4.0.13/bin;../../plugins/org.apache.xerces_4.0.13/xmlParserAPIs.jar;../../plugins/org.apache.xerces_4.0.13/xercesImpl.jar;../../plugins/org.eclipse.core.resources_2.1.1/bin;../../plugins/org.eclipse.core.resources_2.1.1/resources.jar;../../plugins/org.eclipse.core.resources.win32_2.1.0/resources.jar;../../plugins/org.eclipse.ui_2.1.1/bin;../../plugins/org.eclipse.ui_2.1.1/ui.jar;../../plugins/org.eclipse.update.core_2.1.0/bin;../../plugins/org.eclipse.update.core_2.1.0/updatecore.jar;../../plugins/org.eclipse.update.core.win32_2.1.0/updatecore.jar;../../plugins/org.eclipse.help_2.1.2/bin;../../plugins/org.eclipse.help_2.1.2/help.jar;../../plugins/org.apache.lucene_1.2.1/bin;../../plugins/org.apache.lucene_1.2.1/parser.jar;../../plugins/org.apache.lucene_1.2.1/lucene-1.2.jar;../../plugins/org.eclipse.help.appserver_2.1.0/bin;../../plugins/org.eclipse.help.appserver_2.1.0/appserver.jar;../../plugins/org.eclipse.swt_2.1.2/bin;../../plugins/org.eclipse.swt_2.1.2/ws/${ws}/swt.jar;../../plugins/org.eclipse.swt.win32_2.1.2/ws/${ws}/swt.jar;../../plugins/org.eclipse.text_2.1.0/bin;../../plugins/org.eclipse.text_2.1.0/text.jar;../../plugins/org.eclipse.jface_2.1.1/bin;../../plugins/org.eclipse.jface_2.1.1/jface.jar;../../plugins/org.eclipse.jface.text_2.1.0/bin;../../plugins/org.eclipse.jface.text_2.1.0/jfacetext.jar;../../plugins/org.eclipse.ui.views_2.1.0/bin;../../plugins/org.eclipse.ui.views_2.1.0/views.jar;../../plugins/org.eclipse.ui.workbench_2.1.1/bin;../../plugins/org.eclipse.ui.workbench_2.1.1/workbench.jar;../../plugins/org.eclipse.ui.win32_2.1.0/workbench.jar;../../plugins/org.eclipse.ui.win32_2.1.0/bin;../../plugins/org.eclipse.ui.win32_2.1.0/workbenchwin32.jar;../../plugins/org.eclipse.ui.workbench.texteditor_2.1.0/bin;../../plugins/org.eclipse.ui.workbench.texteditor_2.1.0/texteditor.jar;../../plugins/org.eclipse.ui.editors_2.1.0/bin;../../plugins/org.eclipse.ui.editors_2.1.0/editors.jar;../../plugins/org.eclipse.emf.edit_1.1.1/bin;../../plugins/org.eclipse.emf.edit_1.1.1/runtime/edit.jar;../../plugins/org.eclipse.emf.common_1.1.1/bin;../../plugins/org.eclipse.emf.common_1.1.1/runtime/common.jar;../../plugins/org.eclipse.emf.ecore_1.1.1/bin;../../plugins/org.eclipse.emf.ecore_1.1.1/runtime/ecore.jar">
-			<src path="src/"/>
-		</javac>
-		<!-- copy necessary resources -->
-		<copy todir="${temp.folder}/EMFDriver.jar.bin">
-			<fileset dir="src/" excludes="**/*.java"/>
+		<javac destdir="${temp.folder}/EMFDriver.jar.bin" failonerror="${javacFailOnError}" verbose="${javacVerbose}" debug="${javacDebugInfo}" includeAntRuntime="no" bootclasspath="${bootclasspath}" source="${javacSource}" target="${javacTarget}"		>
+			<compilerarg line="${compilerArg}"/>
+			<classpath>
+				<pathelement path="../../plugins/org.eclipse.ui_3.0.0/ui.jar"/>
+				<pathelement path="../../plugins/org.eclipse.core.runtime_3.0.0/runtime.jar"/>
+				<pathelement path="../../plugins/org.eclipse.osgi_3.0.0/core.jar"/>
+				<pathelement path="../../plugins/org.eclipse.osgi_3.0.0/console.jar"/>
+				<pathelement path="../../plugins/org.eclipse.osgi_3.0.0/osgi.jar"/>
+				<pathelement path="../../plugins/org.eclipse.osgi_3.0.0/resolver.jar"/>
+				<pathelement path="../../plugins/org.eclipse.osgi_3.0.0/defaultAdaptor.jar"/>
+				<pathelement path="../../plugins/org.eclipse.osgi_3.0.0/eclipseAdaptor.jar"/>
+				<pathelement path="../../plugins/org.eclipse.help_3.0.0/help.jar"/>
+				<pathelement path="../../plugins/org.eclipse.swt_3.0.0/ws/${basews}/swt.jar"/>
+				<pathelement path="../../plugins/org.eclipse.swt.win32_3.0.0/ws/${basews}/swt.jar"/>
+				<pathelement path="../../plugins/org.eclipse.swt.win32_3.0.0"/>
+				<pathelement path="../../plugins/org.eclipse.jface_3.0.0/jface.jar"/>
+				<pathelement path="../../plugins/org.eclipse.ui.workbench_3.0.0/compatibility.jar"/>
+				<pathelement path="../../plugins/org.eclipse.ui.workbench_3.0.0/workbench.jar"/>
+				<pathelement path="../../plugins/org.eclipse.ui.workbench.compatibility_3.0.0/compatibility.jar"/>
+				<pathelement path="../../plugins/org.eclipse.ui.workbench.compatibility_3.0.0/workbench.jar"/>
+				<pathelement path="../../plugins/org.eclipse.core.expressions_3.0.0/expressions.jar"/>
+				<pathelement path="../../plugins/org.eclipse.core.runtime.compatibility_3.0.0/compatibility.jar"/>
+				<pathelement path="../../plugins/org.eclipse.update.configurator_3.0.0/configurator.jar"/>
+				<pathelement path="../../plugins/org.eclipse.emf.edit_2.0.0/runtime/edit.jar"/>
+				<pathelement path="../../plugins/org.eclipse.emf.common_2.0.0/runtime/common.jar"/>
+				<pathelement path="../../plugins/org.eclipse.emf.ecore_2.0.0/runtime/ecore.jar"/>
+				<pathelement path="../../plugins/org.eclipse.core.resources_3.0.0/resources.jar"/>
+				<pathelement path="../../plugins/org.eclipse.core.resources.win32_3.0.0/resources.jar"/>
+				<pathelement path="../../plugins/org.eclipse.core.resources.win32_3.0.0/resources-win32.jar"/>
+				<pathelement path="../../plugins/org.eclipse.emf.ecore.xmi_2.0.0/runtime/ecore.xmi.jar"/>
+				<pathelement path="BasicMTLruntime.jar"/>
+				<pathelement path="log4j.jar"/>
+			</classpath>
+			<src path="src/"			/>
+			<src path="build/src/"			/>
+			</javac>
+		<!-- Copy necessary resources -->
+		<copy todir="${temp.folder}/EMFDriver.jar.bin" failonerror="true">
+			<fileset dir="src/" excludes="**/*.java, **/package.htm*"			/>
+			<fileset dir="build/src/" excludes="**/*.java, **/package.htm*"			/>
 		</copy>
 		<mkdir dir="${build.result.folder}"/>
 		<jar jarfile="${build.result.folder}/EMFDriver.jar" basedir="${temp.folder}/EMFDriver.jar.bin"/>
 		<delete dir="${temp.folder}/EMFDriver.jar.bin"/>
 	</target>
 
-	<target name="EMFDriversrc.zip" depends="init" unless="EMFDriver.jar">
+	<target name="EMFDriversrc.zip" depends="init" unless="EMFDriversrc.zip">
 		<mkdir dir="${build.result.folder}"/>
-		<zip zipfile="${build.result.folder}/EMFDriversrc.zip" filesonly="false" update="no">
-			<fileset dir="src/" includes="**/*.java"/>
+		<zip zipfile="${build.result.folder}/EMFDriversrc.zip" filesonly="false" whenempty="skip" update="false">
+			<fileset dir="src/" includes="**/*.java"			/>
+			<fileset dir="build/src/" includes="**/*.java"			/>
 		</zip>
 	</target>
 
@@ -75,29 +109,39 @@
 		<antcall target="EMFDriversrc.zip"/>
 	</target>
 
-		<target name="build.zips" depends="init">
-		</target>
+	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
+		<mkdir dir="${destination.temp.folder}/org.inria.EMFDriver_1.0.0"/>
+		<copy todir="${destination.temp.folder}/org.inria.EMFDriver_1.0.0" failonerror="true">
+			<fileset dir="${build.result.folder}" includes="EMFDriver.jar"			/>
+		</copy>
+		<copy todir="${destination.temp.folder}/org.inria.EMFDriver_1.0.0" failonerror="true">
+			<fileset dir="${basedir}" includes="plugin.xml,EMFDriver.jar"			/>
+		</copy>
+	</target>
+
+	<target name="build.zips" depends="init">
+	</target>
 
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/${full.name}"/>
-		<copy file="${build.result.folder}/EMFDriversrc.zip" todir="${destination.temp.folder}/${full.name}"/>
+		<mkdir dir="${destination.temp.folder}/org.inria.EMFDriver_1.0.0"/>
+		<copy file="${build.result.folder}/EMFDriversrc.zip" todir="${destination.temp.folder}/org.inria.EMFDriver_1.0.0" failonerror="false"/>
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/${full.name}"/>
-		<copy file="${temp.folder}/EMFDriver.jar.bin.log" todir="${destination.temp.folder}/${full.name}"/>
+		<mkdir dir="${destination.temp.folder}/org.inria.EMFDriver_1.0.0"/>
+		<copy file="${temp.folder}/EMFDriver.jar.bin.log" todir="${destination.temp.folder}/org.inria.EMFDriver_1.0.0" failonerror="false"/>
 	</target>
 
 	<target name="clean" depends="init" description="Clean the plug-in: org.inria.EMFDriver of all the zips, jars and logs created.">
 		<delete file="${build.result.folder}/EMFDriver.jar"/>
 		<delete file="${build.result.folder}/EMFDriversrc.zip"/>
-		<delete file="${plugin.destination}/${full.name}.jar"/>
-		<delete file="${plugin.destination}/${full.name}.zip"/>
+		<delete file="${plugin.destination}/org.inria.EMFDriver_1.0.0.jar"/>
+		<delete file="${plugin.destination}/org.inria.EMFDriver_1.0.0.zip"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
-	<target name="refresh" depends="init" if="eclipse.running">
-		<eclipse.convertPath fileSystemPath="C:\ECLIPSEEMFDRIVER\eclipse\workspace\org.inria.EMFDriver\" property="resourcePath"/>
+	<target name="refresh" depends="init" if="eclipse.running" description="Refresh this folder.">
+		<eclipse.convertPath fileSystemPath="C:/eclipse3.0/eclipse/workspace/org.inria.EMFDriver" property="resourcePath"/>
 		<eclipse.refreshLocal resource="${resourcePath}" depth="infinite"/>
 	</target>
 
@@ -113,13 +157,10 @@
 			<param name="destination.temp.folder" value="${temp.folder}/"/>
 		</antcall>
 		<delete>
-			<fileset dir="${temp.folder}" includes="**/*.bin.log"/>
+			<fileset dir="${temp.folder}" includes="**/*.bin.log"			/>
 		</delete>
-		<antcall target="zip.folder"/>
+		<zip zipfile="${plugin.destination}/org.inria.EMFDriver_1.0.0.zip" basedir="${temp.folder}" filesonly="true" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
-	</target>
-	<target name="zip.folder" depends="init">
-		<zip zipfile="${plugin.destination}/${full.name}.zip" basedir="${temp.folder}" filesonly="true" update="no" excludes="**/*.bin.log"/>
 	</target>
 
 </project>
