--- a/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?eclipse version="3.0"?>
 <plugin
    id="org.inria.EMFDriver"
    name="EMFDriver Plug-in"
    version="1.0.0"
-   provider-name="inria"
+   provider-name=""
    class="org.inria.EMFDriver.EMFDriverPlugin">
 
    <runtime>
-      <library name="EMFDriver.jar"/>
+      <library name="EMFDriver.jar">
+         <export name="*"/>
+      </library>
       <library name="BasicMTLruntime.jar">
          <export name="*"/>
       </library>
       <library name="log4j.jar"/>
    </runtime>
    <requires>
-      <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.ui"/>
+      <import plugin="org.eclipse.core.runtime.compatibility"/>
       <import plugin="org.eclipse.emf.edit"/>
       <import plugin="org.eclipse.emf.ecore.xmi"/>
    </requires>
