--- a/samples.SimpleUML_projects/SimpleUML.transformations/plugin.xml
+++ b/samples.SimpleUML_projects/SimpleUML.transformations/plugin.xml
@@ -6,7 +6,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: plugin.xml,v 1.2 2004-08-16 11:46:22 dvojtise Exp $
+ * $Id: plugin.xml,v 1.3 2004-08-19 10:16:56 dvojtise Exp $
  */
 -->
 
@@ -19,9 +19,9 @@
   <requires>
      <import plugin="SimpleUML"/>
      <import plugin="SimpleUML.edit"/>
-     <import plugin="org.inria.BasicMTL.runtime" export="true"/>
      <import plugin="org.inria.EMFDriver"/>
      <import plugin="org.eclipse.core.runtime"/>
+     <import plugin="org.inria.BasicMTL.runtime" export="false"/>
   </requires>
 
   <runtime>
