--- a/samples.SimpleUML_projects/SimpleUML.transformations.UI/build.properties
+++ b/samples.SimpleUML_projects/SimpleUML.transformations.UI/build.properties
@@ -4,5 +4,5 @@ output.SimpleUML_transformations_UI.jar = bin/
 bin.includes = plugin.xml,\
                SimpleUML_transformations_UI.jar,\
                src/,\
-               bin/org/,\
-               SimpleUML.transformations.jar
+               SimpleUML.transformations.jar,\
+               bin/
