plugin hasn't been validated to be at version 1 put the major release number back to 0 set the provider field
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@686 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
@@ -3,8 +3,8 @@
 <plugin
    id="org.inria.EMFDriver"
    name="EMFDriver Plug-in"
-   version="1.0.0"
-   provider-name=""
+   version="0.0.3"
+   provider-name="INRIA"
    class="org.inria.EMFDriver.EMFDriverPlugin">
 
    <runtime>
