plugin hasn't been validated to be at version 1 put the major release number back to 0
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@687 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.xml
@@ -3,8 +3,8 @@
 <plugin
    id="org.inria.mtl"
    name="MTL For Eclipse"
-   version="1.0.0"
-   provider-name="Serge DZALE--IRISA/INRIA Rennes"
+   version="0.0.3"
+   provider-name="INRIA"
    class="org.inria.mtl.MTLPlugin">
    <runtime>
       <library name="MTLPlugin.jar"/>
