added a log4j_configuration.xml file in the distribution
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@688 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
@@ -8,5 +8,6 @@ bin.includes = plugin.xml,\
                ThirdParty/,\
                build/,\
                META-INF/,\
-               manifest/
+               manifest/,\
+               log4j_configuration.xml
 output.runtime.jar = bin/
