--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/.classpath
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/.classpath
@@ -12,10 +12,10 @@
 	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/JMIRepository.jar"/>
 	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/ow_monolog.jar"/>
 	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/ow_utils_commandline.jar"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="build/src"/>
-	<classpathentry exported="true" kind="lib" path="ThirdParty/MDR/nbmdr.jar"/>
 	<classpathentry exported="true" kind="lib" path="ThirdParty/JUnit/junit.jar"/>
+	<classpathentry kind="src" path="src/"/>
+	<classpathentry kind="src" path="build/src/"/>
+	<classpathentry exported="true" kind="lib" path="ThirdParty/MDR/nbmdr.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
