--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.properties
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/plugin.properties
@@ -20,10 +20,12 @@ MTLPropertyPage=MTL project compiling properties
 MTLFilePropertyPage=MTL File compiling properties
 MTLPerspective=Perspective MTL
 MTLConsoleView=Console MTL
+mtlModelConsoleView=Project Explorer
 MTLNature=MTL Nature
 MTLNewProjectPreferencePage =New MTL project
 MTLEditorPreferencePage=Editor
 MTLcomp=Compilateur
+MTLBuilder = MTL Builder
 MTLViewCategory=MTL
 outline=Outline
 Log4J=Log4J 
@@ -31,17 +33,23 @@ menu.clean=Clean
 menu.tooltip.clean=Run the Clean command
 menu.about=About MTL Plugin
 menu.tooltip.about=About MTL Plugin
-menu.newProject=Create a new MTL Project
+menu.newProject=Add MTL Project
 menu.tooltip.newProject=Create a new MTL Project
+menu.newFile=Add MTL File
+menu.tooltip.newFile=Create a new MTL File
+menu.newFolder=Add MTL Folder
+menu.tooltip.newFolder=Create a new MTL Folder
+
+
 
 ##Wizards  Extension point names ##
 new.category.name=MTL 
 new.pluginProject.name=MTL Project
-new.pluginProject.description=Create a MTL Project
+new.pluginProject.description=Add MTL Project
 new.pluginFolder.name=MTL Source Folder
-new.pluginFolder.description=Create a MTL Source Folder
+new.pluginFolder.description=New MTL Source Folder
 new.pluginFile.name=MTL File
-new.pluginFile.description=Create a MTL File
+new.pluginFile.description=New MTL File
 
 ##Markers
 MTLProblem = MTL Generation Problem
@@ -55,7 +63,7 @@ build.all.projects = Compile all MTL Projects
 tooltip.build.all.projects=Compile all MTL Projects in workspace
 build.project=Compile Project
 tooltip.build.project=Compile selected project
-build.folder=Compile folder
+build.folder=Compile Folder
 tooltip.build.folder=Compile selected source folder
 tooltip.run.project=Run project
 run.project=Run project
@@ -148,153 +156,12 @@ ActionDefinition.showJavadoc.description= Shows the tooltip description for the 
 
 #--- Source menu
 ActionDefinition.comment.name= Comment
-ActionDefinition.comment.description= Turn the selected lines into PHP comments
+ActionDefinition.comment.description= Turn the selected lines into MTL comments
 
 ActionDefinition.uncomment.name= Uncomment
-ActionDefinition.uncomment.description= Uncomment the selected PHP comment lines
-
-ActionDefinition.format.name= Format
-ActionDefinition.format.description= Format the selected text
-
-ActionDefinition.addImport.name= Add Import
-ActionDefinition.addImport.description= Create import statement on selection
-
-ActionDefinition.organizeImports.name= Organize Imports
-ActionDefinition.organizeImports.description= Evaluate all required imports and replace the current imports
-
-ActionDefinition.surroundWith.tryCatch.name= Surround with try/catch block
-ActionDefinition.surroundWith.tryCatch.description= Surround the selected text with a try/catch block
-
-ActionDefinition.overrideMethods.name= Override/Implement Methods
-ActionDefinition.overrideMethods.description= Override or implement methods from super types
-
-ActionDefinition.addUnimplementedConstructors.name= Add Constructors from Superclass
-ActionDefinition.addUnimplementedConstructors.description= Evaluate and add constructors from superclass
-
-ActionDefinition.findStringsToExternalize.name= Find Strings to Externalize
-ActionDefinition.findStringsToExternalize.description= Find strings that are not externalized
-
-ActionDefinition.externalizeStrings.name= Externalize Strings
-ActionDefinition.externalizeStrings.description= Find all string that are not externalized and puts them into a separate property file
-
-ActionDefinition.nextProblem.name= Go to Next Problem
-ActionDefinition.nextProblem.description= Go to next problem
-
-ActionDefinition.previousProblem.name= Go to Previous Problem
-ActionDefinition.previousProblem.description= Go to previous problem
-
-#--- Refactor menu
-ActionDefinition.refactorRedo.name= Redo
-ActionDefinition.refactorRedo.description= Redo the last refactoring
-
-ActionDefinition.refactorUndo.name= Undo
-ActionDefinition.refactorUndo.description= Undo the last refactoring
-
-ActionDefinition.pullUp.name= Pull Up
-ActionDefinition.pullUp.description= Move members to a superclass
-
-ActionDefinition.renameElement.name= Rename
-ActionDefinition.renameElement.description= Rename the selected element
-
-ActionDefinition.modifyMethodParameters.name= Change Method Signature
-ActionDefinition.modifyMethodParameters.description= Change method signature include parameter names and parameter order
-
-ActionDefinition.moveElement.name= Move
-ActionDefinition.moveElement.description= Move the selected element to a new location
-
-ActionDefinition.extractLocalVariable.name= Extract Local Variable
-ActionDefinition.extractLocalVariable.description= Extract an expression into a new local variable and uses the local instead
-
-ActionDefinition.extractConstant.name= Extract Constant
-ActionDefinition.extractConstant.description= Extract a constant into a new static field and uses the field instead
-
-ActionDefinition.inline.name= Inline
-ActionDefinition.inline.description= Inline a constant, local variable or method
-
-ActionDefinition.selfEncapsulateField.name= Self Encapsulate Field
-ActionDefinition.selfEncapsulateField.description= Create getting and setting methods for the field and use only those to access the field
-
-ActionDefinition.extractMethod.name= Extract Method
-ActionDefinition.extractMethod.description= Extract a set of statements or an expression into a new method and use the method instead
-
-ActionDefinition.extractInterface.name= Extract Interface
-ActionDefinition.extractInterface.description= Extract a set of members into a new interface and tries to use that interface instead
-
-ActionDefinition.moveInnerToTopLevel.name= Move to Top Level
-ActionDefinition.moveInnerToTopLevel.description= Convert an inner class to a top level class
-
-ActionDefinition.useSupertype.name= Use Supertype Where Possible
-ActionDefinition.useSupertype.description= Try to re-route the access via a supertype where possible
-
-ActionDefinition.promoteLocalVariable.name= Promote Local Variable to Field
-ActionDefinition.promoteLocalVariable.description= Convert a local variable into a field
-
-ActionDefinition.convertAnonymousToNested.name= Convert Anonymous to Nested
-ActionDefinition.convertAnonymousToNested.description= Convert an anonymous class to a nest class
+ActionDefinition.uncomment.description= Uncomment the selected MTL comment lines
 
 #--- Navigate menu
 ActionDefinition.openEditor.name= Open
 ActionDefinition.openEditor.description= Open an editor on the selected element
-
-ActionDefinition.openSuperImplementation.name= Open Super Implementation
-ActionDefinition.openSuperImplementation.description= Open the Implementation in the Super Type
-
-ActionDefinition.openExternalJavadoc.name= Open E&xternal PHPdoc
-ActionDefinition.openExternalJavadoc.description= Open the PHPdoc of the selected element in an external browser
-
-ActionDefinition.openTypeHierarchy.name= Open Type Hierarchy
-ActionDefinition.openTypeHierarchy.description= Open a type hierarchy on the selected element
-
-ActionDefinition.showInPackageView.name= Show in Package Explorer
-ActionDefinition.showInPackageView.description= Show the selected element in Package Explorer
-
-ActionDefinition.showInNavigatorView.name= Show in &Navigator View
-ActionDefinition.showInNavigatorView.description= Show the selected element in the Resource Navigator
-
-#--- Search menu
-ActionDefinition.referencesInWorkspace.name= Search References in Workspace
-ActionDefinition.referencesInWorkspace.description= Search for References to the Selected Element in the Workspace
-
-ActionDefinition.referencesInHierarchy.name= Search References in Hierarchy
-ActionDefinition.referencesInHierarchy.description= Search for References of the Selected Element in its Hierarchy
-
-ActionDefinition.referencesInWorkingSet.name= Search References in Working Set
-ActionDefinition.referencesInWorkingSet.description= Search for References to the Selected Element in a Working Set
-
-ActionDefinition.readAccessInworkspace.name= Search Read Access in Workspace
-ActionDefinition.readAccessInWorkspace.description= Search for Read References to the Selected Element in the Workspace
-
-ActionDefinition.readAccessInHierarchy.name= Search Read Access in Hierarchy
-ActionDefinition.readAccessInHierarchy.description= Search for Read References of the Selected Element in its Hierarchy
-
-ActionDefinition.readAccessInWorkingSet.name= Search Read Access in Working Set
-ActionDefinition.readAccessInWorkingSet.description= Search for Read References to the Selected Element in a Working Set
-
-ActionDefinition.writeAccessInWorkspace.name=Search Write Access in Workspace
-ActionDefinition.writeAccessInWorkspace.description= Search for Write References to the Selected Element in the Workspace
-
-ActionDefinition.writeAccessInHierarchy.name= Search Write Access in Hierarchy
-ActionDefinition.writeAccessInHierarchy.description= Search for Write References of the Selected Element in its Hierarchy
-
-ActionDefinition.writeAccessInWorkingSet.name= Search Write Access in Working Set
-ActionDefinition.writeAccessInWorkingSet.description= Search for Write References to the Selected Element in a Working Set
-
-ActionDefinition.declarationsInWorkspace.name= Search Declaration in Workspace
-ActionDefinition.declarationsInWorkspace.description= Search for Declarations of the Selected Element in the Workspace
-
-ActionDefinition.declarationsInHierarchy.name= Search Declaration in Hierarchy
-ActionDefinition.declarationsInHierarchy.description= Search for Declarations of the Selected Element in its Hierarchy
-
-ActionDefinition.declarationsInWorkingSet.name= Search Declaration in Working Set
-ActionDefinition.declarationsInWorkingSet.description= Search for Declarations of the Selected Element in a Working Set
-
-ActionDefinition.implementorsInWorkspace.name= Search Implementors in Workspace
-ActionDefinition.implementorsInWorkspace.description= Search for Implementors of the Selected Interface
-
-ActionDefinition.implementorsInWorkingSet.name= Search Implementors in Working Set
-ActionDefinition.implementorsInWorkingSet.description= Search for Implementors of the Selected Interface in a Working Set
-
-#---  miscellaenous
-ActionDefinition.togglePresentation.name= Show Source of Selected Element Only
-ActionDefinition.togglePresentation.description= Show Source of Selected Element Only
 
