--- a/samples.library_projects/library.edit/.classpath
+++ b/samples.library_projects/library.edit/.classpath
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="src"/>
-    <classpathentry kind="src" path="/library"/>
-    <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
-    <classpathentry kind="var" path="APACHE_XERCES_API"/>
-    <classpathentry kind="var" path="APACHE_XERCES"/>
-    <classpathentry kind="var" path="ECLIPSE_CORE_RUNTIME"/>
-    <classpathentry kind="var" path="ECLIPSE_CORE_RESOURCES"/>
-    <classpathentry kind="var" path="EMF_COMMON"/>
-    <classpathentry kind="var" path="EMF_ECORE"/>
-    <classpathentry kind="var" path="EMF_EDIT"/>
-    <classpathentry kind="output" path="runtime"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="/library"/>
+	<classpathentry sourcepath="JRE_SRC" kind="var" path="JRE_LIB"/>
+	<classpathentry kind="var" path="ECLIPSE_CORE_RUNTIME"/>
+	<classpathentry kind="var" path="ECLIPSE_CORE_RESOURCES"/>
+	<classpathentry kind="var" path="EMF_COMMON"/>
+	<classpathentry kind="var" path="EMF_ECORE"/>
+	<classpathentry kind="var" path="EMF_EDIT"/>
+	<classpathentry kind="var" path="ECLIPSE_OSGI"/>
+	<classpathentry kind="output" path="runtime"/>
 </classpath>
