EMFDriver doesn't rely anymore on a copy of the BasicMTL runtime. Now there is a dependency to the BasicMTL.runtime plugin 	This avoids troubles like "LinkageError" exceptions
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@705 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/plugin.xml
@@ -21,6 +21,7 @@
       <import plugin="org.eclipse.core.runtime.compatibility"/>
       <import plugin="org.eclipse.emf.edit"/>
       <import plugin="org.eclipse.emf.ecore.xmi"/>
+      <import plugin="org.inria.BasicMTL.runtime"/>
    </requires>
 
 
